created navigation bar using JS

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/2fce70ce42.js" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body id="parent">
     <!-- Heading and Navigation -->
-    <h1>HR Management App</h1>
+    <!-- <h1>HR Management App</h1>
 
     <div id="nav_container">
       <div id="sort_filter">
@@ -33,12 +33,11 @@
         </div>
       </div>
       <div id="add_employee_div">
-        <p>Employee</p>
         <button id="add_new">Add New</button>
       </div>
-    </div>
+    </div> -->
 <!-- Initial viewing of table -->
-    <table id="main_table">
+    <!-- <table id="main_table">
       <tr>
         <th>Employee ID</th>
         <th>Name</th>
@@ -124,7 +123,7 @@
           </div>  
         </td>
       </tr>
-    </table>
+    </table> -->
 
     <!-- Modal Box for adding data -->
     <div id="modal_box_add">
@@ -172,6 +171,9 @@
               <td class="col_1"><label for="location_detail">Location Detail :</label></td>
               <td class="col_2"><input type="text" id="location_detail" name=""></td>
           </tr>
+          <!-- <tr>
+
+          </tr> -->
       </table>
       <div id="submit_btn_div">
           <button>Submit Details</button>
