loaded data from JSON for initial viewing of data

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <td>1</td>
         <td>Joey</td>
         <td>joey@gmail.com</td>
-        <td>Js,TS,Python</td>
+        <td class="skill_td"><button>JavaScript</button>&nbsp<button>TypeScript</button>&nbsp<button>Python</button></td>
         <td>
           <div class="icons">
               <i class="fa-solid fa-eye" onclick="modal_box_view()"></i>
@@ -62,7 +62,7 @@
         <td>1</td>
         <td>Joey</td>
         <td>joey@gmail.com</td>
-        <td>Js,TS,Python</td>
+        <td class="skill_td"><button>JavaScript</button>&nbsp<button>TypeScript</button>&nbsp<button>Python</button></td>
         <td>
           <div class="icons">
               <i class="fa-solid fa-eye" onclick="modal_box_view()"></i>
@@ -75,7 +75,7 @@
         <td>1</td>
         <td>Joey</td>
         <td>joey@gmail.com</td>
-        <td>Js,TS,Python</td>
+        <td class="skill_td"><button>JavaScript</button>&nbsp<button>TypeScript</button>&nbsp<button>Python</button></td>
         <td>
           <div class="icons">
               <i class="fa-solid fa-eye" onclick="modal_box_view()" ></i>
@@ -88,7 +88,7 @@
         <td>1</td>
         <td>Joey</td>
         <td>joey@gmail.com</td>
-        <td>Js,TS,Python</td>
+        <td class="skill_td"><button>JavaScript</button>&nbsp<button>TypeScript</button>&nbsp<button>Python</button></td>
         <td>
           <div class="icons">
               <i class="fa-solid fa-eye" id="view_icon"></i>
@@ -101,7 +101,7 @@
         <td>1</td>
         <td>Joey</td>
         <td>joey@gmail.com</td>
-        <td>Js,TS,Python</td>
+        <td class="skill_td"><button>JavaScript</button>&nbsp<button>TypeScript</button>&nbsp<button>Python</button></td>
         <td>
           <div class="icons">
               <i class="fa-solid fa-eye" onclick="modal_box_view()"></i>
@@ -114,7 +114,7 @@
         <td>1</td>
         <td>Joey</td>
         <td>joey@gmail.com</td>
-        <td>Js,TS,Python</td>
+        <td class="skill_td"><button>JavaScript</button>&nbsp<button>TypeScript</button>&nbsp<button>Python</button></td>
         <td>
           <div class="icons">
               <i class="fa-solid fa-eye" onclick="modal_box_view()"></i>
