loaded the initial data from JSON

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <td class="skill_td"><button>JavaScript</button>&nbsp<button>TypeScript</button>&nbsp<button>Python</button></td>
         <td>
           <div class="icons">
-              <i class="fa-solid fa-eye" onclick="modal_box_view()"></i>
+              <i class="fa-solid fa-eye" onclick="modal_box_view() id="101"></i>
               <i class="fa-solid fa-pen-to-square" ></i>
               <i class="fa-solid fa-trash" onclick="modal_delete()"></i>
           </div>  
@@ -171,9 +171,6 @@
               <td class="col_1"><label for="location_detail">Location Detail :</label></td>
               <td class="col_2"><input type="text" id="location_detail" name=""></td>
           </tr>
-          <!-- <tr>
-
-          </tr> -->
       </table>
       <div id="submit_btn_div">
           <button>Submit Details</button>
