Adding data to table almost completed except the last column of table

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           </tr>
       </table>
       <div id="submit_btn_div">
-          <button>Submit Details</button>
+          <button id="submit_btn">Submit Details</button>
       </div>
     </div>
 <!-- Modal box for viewing data -->
@@ -193,7 +193,7 @@
           </tr>
           <tr>
               <td class="col_1"><label for="DOB_!">Date Of Birth :</label></td>
-              <td class="col_2"><input type="date" id="DOB_!" name=""></td>
+              <td class="col_2"><input type="text" id="DOB_!" name=""></td>
           </tr>
           <tr>
               <td class="col_1"><label for="age_!">Age :</label> </td>
@@ -209,7 +209,7 @@
           </tr>
           <tr>
               <td class="col_1"><label for="DOJ_!">Date of Joining :</label</td>
-              <td class="col_2"><input type="date" id="DOJ_!" name=""></td>
+              <td class="col_2"><input type="text" id="DOJ_!" name=""></td>
           </tr>
           <tr>
               <td class="col_1"><label for="designation_!">Designation :</label></td>
