deleted some unwanted comments

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
   </head>
   <body id="parent">
     <!-- Heading and Navigation -->
-    <!-- <h1>HR Management App</h1>
-
+    <h1>HR Management App</h1>
     <div id="nav_container">
       <div id="sort_filter">
         <div  id="s_f_div1">
@@ -35,7 +34,7 @@
       <div id="add_employee_div">
         <button id="add_new">Add New</button>
       </div>
-    </div> -->
+    </div> 
 <!-- Initial viewing of table -->
     <!-- <table id="main_table">
       <tr>
@@ -125,7 +124,7 @@
       </tr>
     </table> -->
 
-    <!-- Modal Box for adding data -->
+<!-- Modal Box for adding data -->
     <div id="modal_box_add">
       <table id="modal_table">
           <tr id="caption">
