delete function implemented

--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@
               <td class="col_2"><input type="text" id="location_detail_!" name=""></td>
           </tr>
       </table>
+      <div id="edit_btn_div">
+        <button id="edit_btn">Update Details</button>
+    </div>
     </div>
 
 <!-- Modal box for delete Confirmation -->
