fixed bugs on add button

--- a/index.html
+++ b/index.html
@@ -132,15 +132,15 @@
           </tr>
           <tr>
               <td class="col_1"><label for="employee_id">Employee ID :</label> </td>
-              <td class="col_2"><input type="text" id="employee_id" name="" ></td>
+              <td class="col_2"><input type="text" id="employee_id" name="" required></td>
           </tr>
           <tr>
               <td class="col_1"><label for="name">Name :</label> </td>
-              <td class="col_2"><input type="text" id="name" name="" ></td>
+              <td class="col_2"><input type="text" id="name" name="" required ></td>
           </tr>
           <tr>
               <td class="col_1"><label for="DOB">Date Of Birth :</label></td>
-              <td class="col_2"><input type="date" id="DOB" name=""></td>
+              <td class="col_2"><input type="date" id="DOB" name="" ></td>
           </tr>
           <tr>
               <td class="col_1"><label for="age">Age :</label> </td>
@@ -148,7 +148,7 @@
           </tr>
           <tr>
               <td class="col_1"><label for="email">Email ID :</label></td>
-              <td class="col_2"><input type="email" id="email" name=""></td>
+              <td class="col_2"><input type="email" id="email" name="" required></td>
           </tr>
           <tr>
               <td class="col_1"><label for="experiance">Experiance :</label></td>
@@ -164,7 +164,7 @@
           </tr>
           <tr>
               <td class="col_1"><label for="skills">Skills :</label></td>
-              <td class="col_2"><input type="text" id="skills" name="" ></td>
+              <td class="col_2"><input type="text" id="skills" name="" required></td>
           </tr>
           <tr>
               <td class="col_1"><label for="location_detail">Location Detail :</label></td>
@@ -184,43 +184,43 @@
           </tr>
           <tr>
               <td class="col_1"><label for="employee_id_!">Employee ID :</label> </td>
-              <td class="col_2"><input type="text" id="employee_id_!" name="" ></td>
+              <td class="col_2"><input type="text" id="employee_id_!" name=""readonly ></td>
           </tr>
           <tr>
               <td class="col_1"><label for="name_!">Name :</label> </td>
-              <td class="col_2"><input type="text" id="name_!" name="" ></td>
+              <td class="col_2"><input type="text" id="name_!" name="" readonly></td>
           </tr>
           <tr>
               <td class="col_1"><label for="DOB_!">Date Of Birth :</label></td>
-              <td class="col_2"><input type="text" id="DOB_!" name=""></td>
+              <td class="col_2"><input type="text" id="DOB_!" name="" readonly></td>
           </tr>
           <tr>
               <td class="col_1"><label for="age_!">Age :</label> </td>
-              <td class="col_2"><input type="text" id="age_!" name="" ></td>
+              <td class="col_2"><input type="text" id="age_!" name="" readonly ></td>
           </tr>
           <tr>
               <td class="col_1"><label for="email_!">Email ID :</label></td>
-              <td class="col_2"><input type="email" id="email_!" name=""></td>
+              <td class="col_2"><input type="email" id="email_!" name="" readonly></td>
           </tr>
           <tr>
               <td class="col_1"><label for="experiance_!">Experiance :</label></td>
-              <td class="col_2"><input type="text" id="experiance_!" name=""></td>
+              <td class="col_2"><input type="text" id="experiance_!" name="" readonly></td>
           </tr>
           <tr>
               <td class="col_1"><label for="DOJ_!">Date of Joining :</label</td>
-              <td class="col_2"><input type="text" id="DOJ_!" name=""></td>
+              <td class="col_2"><input type="text" id="DOJ_!" name="" readonly></td>
           </tr>
           <tr>
               <td class="col_1"><label for="designation_!">Designation :</label></td>
-              <td class="col_2"><input type="text" id="designation_!" name=""></td>
+              <td class="col_2"><input type="text" id="designation_!" name="" readonly></td>
           </tr>
           <tr>
               <td class="col_1"><label for="skills_!">Skills :</label></td>
-              <td class="col_2"><input type="text" id="skills_!" name="" ></td>
+              <td class="col_2"><input type="text" id="skills_!" name="" readonly></td>
           </tr>
           <tr>
               <td class="col_1"><label for="location_detail_!">Location Detail :</label></td>
-              <td class="col_2"><input type="text" id="location_detail_!" name=""></td>
+              <td class="col_2"><input type="text" id="location_detail_!" name="" readonly></td>
           </tr>
       </table>
       <div id="edit_btn_div">
