--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
           </tr>
           <tr>
               <td class="col_1"><label for="name_!">Name :</label> </td>
-              <td class="col_2"><input type="text" id="name_!" name="" readonly></td>
+              <td class="col_2"><input type="text" id="name_!" name="" ></td>
           </tr>
           <tr>
               <td class="col_1"><label for="DOB_!">Date Of Birth :</label></td>
@@ -200,7 +200,7 @@
           </tr>
           <tr>
               <td class="col_1"><label for="email_!">Email ID :</label></td>
-              <td class="col_2"><input type="email" id="email_!" name="" readonly></td>
+              <td class="col_2"><input type="email" id="email_!" name="" ></td>
           </tr>
           <tr>
               <td class="col_1"><label for="experiance_!">Experiance :</label></td>
@@ -212,15 +212,15 @@
           </tr>
           <tr>
               <td class="col_1"><label for="designation_!">Designation :</label></td>
-              <td class="col_2"><input type="text" id="designation_!" name="" readonly></td>
+              <td class="col_2"><input type="text" id="designation_!" name="" ></td>
           </tr>
           <tr>
               <td class="col_1"><label for="skills_!">Skills :</label></td>
-              <td class="col_2"><input type="text" id="skills_!" name="" readonly></td>
+              <td class="col_2"><input type="text" id="skills_!" name="" ></td>
           </tr>
           <tr>
               <td class="col_1"><label for="location_detail_!">Location Detail :</label></td>
-              <td class="col_2"><input type="text" id="location_detail_!" name="" readonly></td>
+              <td class="col_2"><input type="text" id="location_detail_!" name="" ></td>
           </tr>
       </table>
       <div id="edit_btn_div">
