done name sorting

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <input list="sort"  id="sort_label">
           <datalist id="sort">
             <option value="Employee ID ">
-            <option value="Name">
+            <option value="Name" id="Name" onclick="name_sorting()">
           </datalist>
         </div>
         <div id="s_f_div2">
