filtering based on skills completed

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div id="s_f_div2">
           <label for="filter_label">Filter :</label>
-          <select name="filter_label" id="filter_label" onclick="getFilterValue()">
+          <!-- <select name="filter_label" id="filter_label" onclick="getFilterValue()">
               <option value="none">None</option>
               <option value="Go">Go</option>
               <option value="GraphQL">GraphQL</option>
@@ -37,7 +37,8 @@
               <option value="Azure">Azure</option>
               <option value="Firebase">Firebase</option>
               <option value="Linux">Linux</option>
-          </select>
+          </select> -->
+          <input type="text" name="filter_label" id="filter_search">
         </div>
       </div>
       <div id="add_employee_div">
