--- a/index.html
+++ b/index.html
@@ -178,15 +178,11 @@
               <td class="col_1"><label for="designation">Designation :</label></td>
               <td class="col_2"><input type="text" id="designation" name=""></td>
           </tr>
-          <!-- <tr>
-              <td class="col_1"><label for="skills">Skills :</label></td>
-              <td class="col_2"><input type="text" id="skills" name="" required></td>
-          </tr> -->
-          <tr>
+          <tr id="skill_row">
             <td class="col_1"><label for="skills">Skills :</label></td>
             <td id="outer_skill_div" class="col_2">
               <div id="inner_skill_div" >
-                <input type="text" id="skills" list="skill_list" required>
+                <input type="text" id="skills" list="skill_list" required placeholder="add skill">
               </div>
             </td>
             <!-- <datalist id="skill_list">
