bug fix on updating skill

--- a/index.html
+++ b/index.html
@@ -245,8 +245,9 @@
             <td class="col_1"><label for="skills_new">Skills :</label></td>
             <td id="outer_skill_div_new" class="col_2">
               <div id="inner_skill_div_new" >
-                <input type="text" id="skills_new" list="skill_list" required placeholder="add skill">
+                
               </div>
+              <input type="text" id="skills_new" list="skill_list" required placeholder="add skill">
             </td>
             <!-- <datalist id="skill_list">
               <option value="AWS">
@@ -262,7 +263,7 @@
           </tr>
       </table>
       <div id="edit_btn_div">
-        <button id="edit_btn">Update Details</button>
+        <button id="edit_btn">Update</button>
     </div>
     </div>
 
