duplicate entry of skills entry while updating removed

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div id="add_employee_div">
-        <button id="add_new">Add New</button>
+        <button id="add_new">Add</button>
       </div>
     </div> 
 <!-- Initial viewing of table -->
@@ -144,7 +144,7 @@
     <div id="modal_box_add">
       <table id="modal_table">
           <tr id="caption">
-              <td colspan="2">ADD DETAILS <i class="fa-solid fa-xmark" id="add_cross"></i></td>
+              <td colspan="2">ADD <i class="fa-solid fa-xmark" id="add_cross"></i></td>
           </tr>
           <tr>
               <td class="col_1"><label for="employee_id">Employee ID :</label> </td>
@@ -199,7 +199,7 @@
           </tr>
       </table>
       <div id="submit_btn_div">
-          <button id="submit_btn">Submit Details</button>
+          <button id="submit_btn">Submit</button>
       </div>
     </div>
 <!-- Modal box for viewing data -->
