implemented datalist feature for skill adition

--- a/index.html
+++ b/index.html
@@ -249,13 +249,20 @@
               </div>
               <input type="text" id="skills_new" list="skill_list" required placeholder="add skill">
             </td>
-            <!-- <datalist id="skill_list">
-              <option value="AWS">
-              <option value="Python">
+            <datalist id="skill_list">
+              <option value="Go">
+              <option value="GraphQL">
+              <option value="JavaScript">
               <option value="React">
-              <option value="Node JS">
+              <option value="Node">
+              <option value="AWS">
+              <option value="TypeScript">
+              <option value="Azure">
+              <option value="Firebase">
               <option value="Linux">
-            </datalist> -->
+              <option value="Java">
+              <option value="Python">
+            </datalist>
           </tr>
           <tr>
               <td class="col_1"><label for="location_detail_!">Location Detail :</label></td>
