when hovered over buttons pointer is shown

--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>CRUD App</title>
+    <!-- <link rel="shortcut icon" type="image/png" href="Images/favicon_io/apple-touch-icon.png"/> -->
     <!-- CSS -->
     <link rel="stylesheet" href="CSS/style.css" />
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/2fce70ce42.js" crossorigin="anonymous"></script>
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io _main/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io _main/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io _main/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
   <body id="parent">
     <!-- Heading and Navigation -->
@@ -24,7 +30,7 @@
         </select>
         </div>
         <div id="s_f_div2">
-          <label for="filter_label">Filter :</label>
+          <label for="filter_label">Filter by skill :</label>
           <input type="text" name="filter_label" id="filter_search">
         </div>
       </div>
@@ -99,7 +105,7 @@
           </tr>
           <tr>
               <td class="col_1"><label for="employee_id_!">Employee ID :</label> </td>
-              <td class="col_2"><input type="text" id="employee_id_!" name=""readonly ></td>
+              <td class="col_2"><input type="text" id="employee_id_!" name=""readonly > </td>
           </tr>
           <tr>
               <td class="col_1"><label for="name_!">Name :</label> </td>
