added placeholder to filter

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="nav_container">
       <div id="sort_filter">
         <div  id="s_f_div1">
-          <label for="sort_label">Sort :</label>
+          <label for="sort_label">Sort By :</label>
           <select name="sort_label" id="sort_label" onclick="getSortValue()">
             <!-- <option value="none">None</option> -->
             <option value="Employee ID" >Employee ID</option>
@@ -30,8 +30,8 @@
         </select>
         </div>
         <div id="s_f_div2">
-          <label for="filter_label">Filter by skill :</label>
-          <input type="text" name="filter_label" id="filter_search">
+          <label for="filter_label">Filter By :</label>
+          <input type="text" name="filter_label" id="filter_search" placeholder="Skill">
         </div>
       </div>
       <div id="add_employee_div">
